Changed bit of text

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     
-<!-- Mirrored from bepatrickdavid.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 19 Nov 2017 16:10:33 GMT -->
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <meta name="google-site-verification" content="WDykerpX8dc0nrCCLlCXt9BjBnJ5-a3xRITGbGpdago" /> -->
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Patrick David | Italian Web Developer</title>
+        <title>Govardhan Srinivas | Full Stack Web Developer</title>
         
         <meta name="theme-color" content="#000">
-        <meta name="description" content="Patrick David. Italian Front-End, designer. Website, UI/UX, WordPress Dev. Developer based in Belluno.">
+        <meta name="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore.">
 
         <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
         <meta name="googlebot" content="index,follow"><!-- Google Specific -->
@@ -30,35 +29,34 @@
         <!-- Facebook -->
         <meta property="og:locale" content="it_IT" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Patrick David. Front-End Dev, Web Designer." />
-        <meta property="og:description" content="Patrick David. Italian Front-End Dev, Web Designer. Website, UI/UX, WordPress Dev. Developer based in Belluno." />
+        <meta property="og:title" content="Govardhan Srinivas. Full Stack Web Developer." />
+        <meta property="og:description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore." />
         <meta property="og:url" content="index.html" />
-        <meta property="og:site_name" content="Patrick David" />
+        <meta property="og:site_name" content="Govardhan Srinivas" />
         <meta property="og:image" content="assets/img/showcase.jpg" />
 
         <!-- Twitter -->
-        <meta name="twitter:card" content="summary"/>
-        <meta name="twitter:description" content="Patrick David. Italian Front-End, designer. Website, UI/UX, WordPress Dev. Developer based in Belluno."/>
-        <meta name="twitter:title" content="Patrick David. Italian Front-End, designer. Website, UI/UX, WordPress Dev. Developer based in Belluno."/>
-        <meta name="twitter:site" content="@bepatrickdavid"/>
-        <meta name="twitter:creator" content="@bepatrickdavid"/>
-        <meta name="twitter:image" content="assets/img/showcase.jpg">
+        <!-- <meta name="twitter:card" content="summary"/>
+        <meta name="twitter:title" content="Govardhan Srinivas"/>
+        <meta name="twitter:description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore."/>
+        <meta name="twitter:site" content="@Govardhan92"/>
+        <meta name="twitter:creator" content="@Govardhan92"/>
+        <meta name="twitter:image" content="assets/img/showcase.jpg"> -->
 
-        <link href="https://plus.google.com/+PatrickdavidItWebAgency" rel="publisher">
-        <meta itemprop="name" content="Patrick David">
-        <meta itemprop="description" content="Patrick David. Italian Front-End, designer. Website, UI/UX, WordPress Dev. Developer based in Belluno.">
+        <link href="https://plus.google.com/u/0/+govardhans92" rel="publisher">
+        <meta itemprop="name" content="Govardhan Srinivas">
+        <meta itemprop="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore.">
         <meta itemprop="image" content="assets/img/showcase.jpg">
 
         <script type="application/ld+json">
         {
           "@context" : "http://schema.org",
           "@type" : "CreativeWork",
-          "name" : "Patrick David",
-          "url" : "http://bepatrickdavid.com",
+          "name" : "Govardhan Srinivas",
+          "url" : "https://govardhan-srinivas.github.io",
           "sameAs" : [
-            "https://twitter.com/bepatrickdavid",
-            "https://plus.google.com/+PatrickdavidItWebAgency",
-            "https://www.facebook.com/bepatrickdavid/"
+            "https://plus.google.com/+govardhans92",
+            "https://www.facebook.com/govardhan.srinivas92/"
          ]
         }
         </script> 
@@ -109,11 +107,10 @@
         </div>
         <div id="wrap-social">
             <ul>
-                <li><a href="https://www.facebook.com/bepatrickdavid/" target="_blank">Facebook</a></li>
-                <li><a href="https://www.linkedin.com/in/bepatrickdavid/" target="_blank">Linkedin</a></li>
-                <li><a href="https://twitter.com/bepatrickdavid" target="_blank">Twitter</a></li>
-                <li><a href="https://www.behance.net/bepatrickdavid">Behance</a></li>
-                <li><a href="mailto:patrick.david@patrickdavid.com">Mail</a></li>
+                <li><a href="https://www.facebook.com/govardhan.srinivas92/" target="_blank">Facebook</a></li>
+                <li><a href="https://www.linkedin.com/in/govardhan.srinivas/" target="_blank">Linkedin</a></li>
+                <!-- <li><a href="https://twitter.com/govardhan.srinivas92" target="_blank">Twitter</a></li> -->
+                <li><a href="mailto:govardhan.s92@gmail.com">Mail</a></li>
             </ul>
         </div>
         <div id="share-this">
@@ -122,10 +119,11 @@
         <div id="banner-share">
             <div class="wrap">
                 <ul>
-                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=http://bepatrickdavid.com"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=myurl&amp;title=Patrick%20David%20Website&amp;summary=Experimental%20website%20of%20an%20Italian%20Front-End%20Dev&amp;source="><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a href="https://twitter.com/home?status=http%3A//bepatrickdavid.com%20experimental%20website%20of%20an%20Italian%20Front-End%20Dev%20%40bepatrickdavid%20%23dreamdigital"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="https://plus.google.com/share?url=http://bepatrickdavid.com"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=https://govardhan-srinivas.github.io"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=myurl&amp;title=Govardhan%Srinivas%20Website&amp;summary=Experimental%20website%20Full%20Stack%20Web%20Developer&amp;source="><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/home?status=https%3A//govardhan-srinivas.github.io%20
+                        Experimental%20website%20Full%20Stack%20Web%20Developer"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://plus.google.com/share?url=https://govardhan-srinivas.github.io"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="close-button">
@@ -168,12 +166,11 @@
                             <div class="circle circle3 md moove moove-mobile" data-rellax-speed="3"></div>
                             <div class="circle circle4 lg moove moove-mobile" data-rellax-speed="-3"></div>
                             <div class="wrap-description">
-                                <p class="small-height">Front-End Developer<br>
-                                    and Web Designer<br>
-                                    based in Italy</p>
+                                <p class="small-height">Full Stack Web Developer<br>
+                                    based in Bangalore</p>
                             </div>
                             <div class="wrap-content">
-                                <h1>Hello<span class="color">.</span><br>I am<br>Patrick</h1>
+                                <h1>Hello<span class="color">.</span><br>I am<br>Govardhan</h1>
                             </div>
                         </div>
                     </div>
@@ -182,10 +179,10 @@
                     <div class="wrap-services moove" data-rellax-speed="5">
                         <h4>Skills</h4>
                         <ul>
-                            <li><span>UI/UX Design</span></li>
-                            <li><span><a class="simple" href="web-designer.html">Web Design</a></span></li>
-                            <li><span>Front-End Dev</span></li>
-                            <li><span>WordPress Dev</span></li>
+                            <li><span>Angular JS</span></li>
+                            <li><span>Node JS</span></li>
+                            <li><span>Bootstrap</span></li>
+                            <li><span>UI/UX</span></li>
                         </ul>
                     </div>
                     <div class="container">
@@ -193,9 +190,8 @@
                         <div class="circle circle2 moove moove-mobile" data-rellax-speed="2"></div>
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="5">
-                                <h2>Dig_<br>italy<span class="color">:</span></h2>
-                                <p data-animation="reveal">I am a Front-End Developer and UI Designer based in Italy. <br>I am founder and CEO at <a href="http://patrickdavid.com/" target="_blank">Patrick David Creative Agency</a>. I am a dreamer and a fanatic of all digital things. I have many years of experience in consulting in all areas of digital. I love minimal design and pizza. Judge at <a href="https://goo.gl/ZXvuV9" target="_blank">CSSDA</a>. I am also an <a href="https://themeforest.net/user/puredesignthemes/portfolio?ref=puredesignThemes" target="_blank">Envato Author</a>.</p>
-                                <!--<p>Envato is the best and the biggest marketplace of digital products in the world.</p>-->
+                                <h2>About<span class="color">:</span></h2>
+                                <p data-animation="reveal">I am a Full Stack Web Developer based in Bangalore. <br>I'm Full Stack Web Developer at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a>. I am a dreamer and a fanatic of all digital things. I have 2.8 years of experience in IT Consulting. I love minimal design and pizza. I am also an open source contributor.</p>
                             </div>
                         </div>
                     </div>
@@ -210,7 +206,7 @@
                                <h3>Featured_<br>works<span class="color">:</span></h3>
                             </div>
                             <div class="col-md-6 moove" data-rellax-speed="4">
-                                <img src="assets/img/projects-750.jpg" alt="Patrick David Projects">
+                                <img src="assets/img/projects-750.jpg" alt="Govardhan Srinivas Projects">
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="7">
                                 <p data-animation="reveal">I've got more than 10 years of experience in digital products, hundreds of websites developed. National and international customers who have relied on me for design, implementation and management of their digital products. I work also with marketing, sales and art directors to create a blueprint for the digital business. Here you can find some selected works.</p>
@@ -221,12 +217,12 @@
                                     <img src="assets/img/toscano-750.jpg" alt="Toscano Website">
                                     <figcaption>Tos_<br>cano</figcaption>
                                 </figure>
-                                <a href="http://patrickdavid.com/en/case-studies/toscano/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/toscano/" target="_blank" class="link"></a>
                             </div>
                             <div class="see-projects">
                                 <h5>see <br>all projects</h5>
                                 <i class="icon ion-ios-keypad"></i>
-                                <a href="https://www.behance.net/bepatrickdavid" class="link" target="_blank"></a>
+                                <a href="https://www.behance.net/" class="link" target="_blank"></a>
                             </div>
                         </div>
                         <div class="row">
@@ -236,7 +232,7 @@
                                     <img src="assets/img/look-750.jpg" alt="Look Occhiali Website">
                                     <figcaption>Lo_<br>ok</figcaption>
                                 </figure>
-                                <a href="http://patrickdavid.com/en/case-studies/look-occhiali/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/look-occhiali/" target="_blank" class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="1">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
@@ -244,7 +240,7 @@
                                     <img src="assets/img/emmearredo-750.jpg" alt="EmmeArredo Website">
                                     <figcaption>Emm_<br>earredo</figcaption>
                                 </figure>
-                                <a href="http://patrickdavid.com/en/case-studies/emmearredo/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/emmearredo/" target="_blank" class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="2">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
@@ -252,7 +248,7 @@
                                     <img src="assets/img/oleomec-750.jpg" alt="Oleomec Website">
                                     <figcaption>Ole_<br>omec</figcaption>
                                 </figure>
-                                <a href="http://patrickdavid.com/en/case-studies/oleomec/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/oleomec/" target="_blank" class="link"></a>
                             </div>
                         </div>
                     </div>
@@ -269,9 +265,9 @@
                                <div class="col-md-6 moove" data-rellax-speed="2">
                                    <p data-animation="reveal">I drink coffee, I eat pizza. I write code and improve my design and skills every day. I am honored to work with special people. Sometimes i won some awards.</p>
                                    <ul class="padding-onlytop-md">
-                                       <li>Awwwards<br><span><a href="https://www.awwwards.com/sites/bepatrickdavid" target="_blank">Honorable Mention</a></span></li>
-                                       <li>Css Design Awards<br><span><a href="http://www.cssdesignawards.com/sites/bepatrickdavid/30236" target="_blank">Special Kudos</a></span></li>
-                                       <li>Mindsparkle Mag<br><span><a href="http://mindsparklemag.com/website/bepatrickdavid/" target="_blank">Site of the day</a></span></li>
+                                       <li>Indegene LifeSystems<br><span>Best Performer</span></li>
+                                       <!-- <li>Css Design Awards<br><span><a href="http://www.cssdesignawards.com/sites//30236" target="_blank">Special Kudos</a></span></li>
+                                       <li>Mindsparkle Mag<br><span><a href="http://mindsparklemag.com/website//" target="_blank">Site of the day</a></span></li> -->
                                    </ul>
                                </div>
                            </div>
@@ -289,14 +285,13 @@
                             <div class="text-top">
                                 <h3>Hire me</h3>
                             </div>
-                            <h2>I'm always interested about cool stuff. Are you minding a project? <span class="color"><a href="mailto:patrick.david@patrickdavid.com" class="color">Let's talk.</a></span></h2>
+                            <h2>I'm always interested about cool stuff. Are you minding a project? <span class="color"><a href="mailto:govardhan.s92@gmail.com" class="color">Let's talk.</a></span></h2>
                             <div class="wrap-social">
                                 <ul>
-                                    <li><a href="mailto:patrick.david@patrickdavid.com">Mail</a></li>
-                                    <li><a href="https://www.facebook.com/bepatrickdavid" target="_blank">Facebook</a></li>
-                                    <li><a href="https://www.linkedin.com/in/bepatrickdavid/" target="_blank">Linkedin</a></li>
-                                    <li><a href="https://twitter.com/bepatrickdavid" target="_blank">Twitter</a></li>
-                                    <li><a href="https://www.behance.net/bepatrickdavid">Behance</a></li>
+                                    <li><a href="mailto:govardhan.s92@gmail.com">Mail</a></li>
+                                    <li><a href="https://www.facebook.com/govardhan.srinivas92" target="_blank">Facebook</a></li>
+                                    <li><a href="https://www.linkedin.com/in/govardhan-srinivas/" target="_blank">Linkedin</a></li>
+                                    <!-- <li><a href="https://twitter.com/govardhan.s92" target="_blank">Twitter</a></li> -->
                                 </ul>
                             </div>
                         </div>
@@ -326,5 +321,4 @@
         </script> -->
     </body>
 
-<!-- Mirrored from bepatrickdavid.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 19 Nov 2017 16:11:11 GMT -->
 </html>
