Adding google analytics

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="5">
                                 <h2>About<span class="color">:</span></h2>
-                                <p data-animation="reveal">I am a Full Stack Web Developer based in Bangalore. <br>I'm Full Stack Web Developer at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a>. I am a dreamer and a fanatic of all digital things. I have 2.8 years of experience in IT Consulting. I love minimal design and pizza. I am also an open source contributor.</p>
+                                <p data-animation="reveal">I am a Full Stack Web Developer based in Bangalore. <br>I'm Full Stack Web Developer at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a>. I am a dreamer and a fanatic of all digital things. I have 2.8 years of experience in IT Consulting. I love minimal design and pizza. I am also an Open source contributor.</p>
                             </div>
                         </div>
                     </div>
@@ -309,16 +309,17 @@
         <script src="assets/js/library.js"></script>
         <script src="assets/js/main.js"></script>
         
-        <!-- <script>
+        <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                                     })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
 
-            ga('create', 'UA-92287532-1', 'auto');
+            ga('create', 'UA-81225714-3', 'auto');
             ga('send', 'pageview');
 
-        </script> -->
+        </script>
+
     </body>
 
 </html>
