changes to featured works

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </ul>
         </div>
         <div id="share-this">
-            <a href="javascript:void(0)">Share with<i class="icon ion-heart"></i></a>
+            <a href="javascript:void(0)">Share with<i class="fa fa-heart"></i></a>
         </div>
         <div id="banner-share">
             <div class="wrap">
@@ -127,7 +127,7 @@
                 </ul>
             </div>
             <div class="close-button">
-                <a href="javascript:void(0)">Close<i class="icon ion-android-close"></i></a>
+                <a href="javascript:void(0)">Close<i class="fa fa-times-thin"></i></a>
             </div>
         </div>
         
@@ -152,11 +152,11 @@
                 <section id="intro">
                     <div class="container">
                         <div class="row">
-                            <div class="cookie-banner">
+                            <!--div class="cookie-banner">
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" enable-background="new 0 0 100 100" xml:space="preserve"><path d="M22.044,50.502c0.627-2.825-0.331-5.764-2.501-7.676c-0.273-0.238-0.456-0.566-0.518-0.926  c-0.149-0.869,0.434-1.691,1.302-1.842c4.317-0.744,7.216-4.848,6.473-9.166c-0.079-0.463-0.2-0.92-0.361-1.361  c-0.124-0.342-0.128-0.715-0.01-1.061c0.286-0.834,1.193-1.277,2.026-0.992c4.146,1.418,8.657-0.791,10.077-4.934  c0.937-2.738,0.312-5.764-1.632-7.904c1.711-0.592,3.464-1.057,5.243-1.393C62.258,9.46,81.635,22.697,85.422,42.81  c3.787,20.118-9.449,39.493-29.564,43.28c-20.115,3.787-39.491-9.449-43.278-29.562C16.857,57.477,21.095,54.777,22.044,50.502z   M15.052,58.635c4.952,18.748,24.165,29.934,42.915,24.982c18.748-4.951,29.934-24.166,24.98-42.915  c-4.951-18.748-24.164-29.932-42.913-24.98c-0.025,0.006-0.051,0.012-0.076,0.02c1.001,2.113,1.221,4.514,0.619,6.773  c-1.405,5.273-6.819,8.412-12.094,7.006c0.035,0.121,0.067,0.244,0.097,0.365c1.299,5.303-1.946,10.652-7.247,11.951  c1.643,1.664,2.642,3.857,2.82,6.191C24.57,53.471,20.496,58.219,15.052,58.635z"/><g><polygon points="56.328,26.126 52.912,30.626 57.568,35.9 62.383,27.369  "/></g><g><polyline points="73.869,44.121 68.902,45.83 71.697,50.793 73.869,44.121  "/></g><g><polyline points="57.764,57.49 55.916,61.451 59.402,62.74 59.402,58.994 57.764,57.49  "/></g><g><polyline points="43.611,42.562 40.74,47.492 43.107,49.052 46.078,46.888 46.078,42.861 43.611,42.562  "/></g><g><polyline points="31.973,60.068 30.183,64.094 33.187,65.645 33.593,63.057 31.973,60.068  "/></g><g><polyline points="42.575,29.451 39.767,32.98 42.008,33.947 43.32,32.695 43.903,30.22 42.575,29.451  "/></g><g><polyline points="73.504,62.676 70.936,65.701 73.299,68.338 74.863,67.541 74.656,65.539 73.504,62.676  "/></g><g><polygon points="43.778,17.732 44.057,21.736 46.897,20.152 46.897,17.666 43.778,17.666  "/></g><g><polyline points="45.655,56.766 44.299,58.688 45.762,60.406 47.441,58.797 46.847,57.068 45.655,56.766  "/></g><g><polyline points="38.073,72.584 36.347,75.309 38.469,77.736 41.249,76.156 40.491,73.285 38.073,72.584  "/></g><g><polyline points="73.979,29.25 71.1,31.63 72.887,34.906 74.674,32.525 73.979,29.25  "/></g><g><polyline points="53.41,73.111 60.887,70.424 63.479,76.598 59.889,79.986 53.809,76.799 53.41,73.111  "/></g></svg>
                                 <div class="text">
                                     <p>Yes this website uses f***ing <a href="#">cookies</a></p>
-                                </div>
+                                </div-->
                             </div>
                             <div class="text-top">
                                 <h3>des_<br>ign</h3>
@@ -190,8 +190,8 @@
                         <div class="circle circle2 moove moove-mobile" data-rellax-speed="2"></div>
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="5">
-                                <h2>About<span class="color">:</span></h2>
-                                <p data-animation="reveal">I am a Full Stack Web Developer based in Bangalore. <br>I'm Full Stack Web Developer at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a>. I am a dreamer and a fanatic of all digital things. I have 2.8 years of experience in IT Consulting. I love minimal design and pizza. I am also an Open source contributor.</p>
+                                <h2>ab_<br/>out<span class="color">:</span></h2>
+                                <p data-animation="reveal">I am a Full Stack Web Developer based in Bangalore. <br>I currently work at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a> developing webapp, portals and micro services. I am a dreamer and a fanatic of all digital things. I have 3 years of experience in IT Consulting. I love minimal design and pizza. I am also an Open source contributor.</p>
                             </div>
                         </div>
                     </div>
@@ -209,46 +209,46 @@
                                 <img src="assets/img/projects-750.jpg" alt="Govardhan Srinivas Projects">
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="7">
-                                <p data-animation="reveal">I've got more than 10 years of experience in digital products, hundreds of websites developed. National and international customers who have relied on me for design, implementation and management of their digital products. I work also with marketing, sales and art directors to create a blueprint for the digital business. Here you can find some selected works.</p>
+                                <p data-animation="reveal">I've got good exposure in digital products, websites, hybrid apps, CRM platform apps using web technologies developed and deployed to Cloud solutions, together with strong understanding of best practices, analytical capabilities, organizational skills and ability to complete a successful implementation. Here you can find some selected works.</p>
                             </div>
                             <div class="first-project col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="4">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
                                     <em class="line">view project</em>
-                                    <img src="assets/img/toscano-750.jpg" alt="Toscano Website">
-                                    <figcaption>Tos_<br>cano</figcaption>
+                                    <img src="assets/img/toscano-750.jpg" alt="Microsoft BVS">
+                                    <figcaption>Microsoft<br>BVS</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/toscano/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/microsoft-bvs/" target="_blank" class="link"></a>
                             </div>
-                            <div class="see-projects">
+                            <!-- <div class="see-projects"> 
                                 <h5>see <br>all projects</h5>
                                 <i class="icon ion-ios-keypad"></i>
                                 <a href="https://www.behance.net/" class="link" target="_blank"></a>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="row">
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="3">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
                                     <em>view project</em>
-                                    <img src="assets/img/look-750.jpg" alt="Look Occhiali Website">
-                                    <figcaption>Lo_<br>ok</figcaption>
+                                    <img src="assets/img/look-750.jpg" alt="Cloud Central Integration">
+                                    <figcaption>Cloud<br>Central<br>Integration</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/look-occhiali/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/cloud-central-integration/" target="_blank" class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="1">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
                                     <em class="line">view project</em>
-                                    <img src="assets/img/emmearredo-750.jpg" alt="EmmeArredo Website">
-                                    <figcaption>Emm_<br>earredo</figcaption>
+                                    <img src="assets/img/emmearredo-750.jpg" alt="Cloud Central Conversion">
+                                    <figcaption>Cloud<br>Central<br>Conversion</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/emmearredo/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/cloud-central-conversion/" target="_blank" class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="2">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
                                     <em>view project</em>
-                                    <img src="assets/img/oleomec-750.jpg" alt="Oleomec Website">
-                                    <figcaption>Ole_<br>omec</figcaption>
+                                    <img src="assets/img/oleomec-750.jpg" alt="Interactive Detailers">
+                                    <figcaption>Interactive<br>Detailers</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/oleomec/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/iDetail/" target="_blank" class="link"></a>
                             </div>
                         </div>
                     </div>
@@ -285,7 +285,7 @@
                             <div class="text-top">
                                 <h3>Hire me</h3>
                             </div>
-                            <h2>I'm always interested about cool stuff. Are you minding a project? <span class="color"><a href="mailto:govardhan.s92@gmail.com" class="color">Let's talk.</a></span></h2>
+                            <h2>I'm always interested about cool stuff. Are you minding a job? <span class="color"><a href="mailto:govardhan.s92@gmail.com" class="color">Let's talk.</a></span></h2>
                             <div class="wrap-social">
                                 <ul>
                                     <li><a href="mailto:govardhan.s92@gmail.com">Mail</a></li>
