--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div id="wrap-social">
             <ul>
                 <li><a href="https://www.facebook.com/govardhan.srinivas92/" target="_blank">Facebook</a></li>
-                <li><a href="https://www.linkedin.com/in/govardhan.srinivas/" target="_blank">Linkedin</a></li>
+                <li><a href="https://www.linkedin.com/in/govardhan-srinivas/" target="_blank">Linkedin</a></li>
                 <!-- <li><a href="https://twitter.com/govardhan.srinivas92" target="_blank">Twitter</a></li> -->
                 <li><a href="mailto:govardhan.s92@gmail.com">Mail</a></li>
             </ul>
@@ -120,9 +120,9 @@
             <div class="wrap">
                 <ul>
                     <li><a href="https://www.facebook.com/sharer/sharer.php?u=https://govardhan-srinivas.github.io"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=myurl&amp;title=Govardhan%Srinivas%20Website&amp;summary=Experimental%20website%20Full%20Stack%20Web%20Developer&amp;source="><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://govardhan-srinivas.github.io&title=Govardhan%20Srinivas&summary=Full%20Stack%20Developer.%20Angular%20Node%20Bootstrap%20UI/UX%20%20Developer&source=LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li><a href="https://twitter.com/home?status=https%3A//govardhan-srinivas.github.io%20
-                        Experimental%20website%20Full%20Stack%20Web%20Developer"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        Full%20Stack%20Web%20Developer"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a href="https://plus.google.com/share?url=https://govardhan-srinivas.github.io"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
@@ -179,10 +179,11 @@
                     <div class="wrap-services moove" data-rellax-speed="5">
                         <h4>Skills</h4>
                         <ul>
-                            <li><span>Angular JS</span></li>
-                            <li><span>Node JS</span></li>
-                            <li><span>Bootstrap</span></li>
-                            <li><span>UI/UX</span></li>
+                            <li><span>Angular 1.x.x, 2.x.x</span></li>
+                            <li><span>Node JS | Express JS</span></li>
+                            <li><span>Bootstrap | Google Material</span></li>
+                            <li><span>Bower | Grunt | NPM | GIT</span></li>
+                            <li><span>UI/UX Development</span></li>
                         </ul>
                     </div>
                     <div class="container">
@@ -217,7 +218,7 @@
                                     <img src="assets/img/toscano-750.jpg" alt="Microsoft BVS">
                                     <figcaption>Microsoft<br>BVS</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/microsoft-bvs/" target="_blank" class="link"></a>
+                                <a href="#" target="_blank" class="link"></a>
                             </div>
                             <!-- <div class="see-projects"> 
                                 <h5>see <br>all projects</h5>
@@ -232,7 +233,7 @@
                                     <img src="assets/img/look-750.jpg" alt="Cloud Central Integration">
                                     <figcaption>Cloud<br>Central<br>Integration</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/cloud-central-integration/" target="_blank" class="link"></a>
+                                <a href="#" target="_blank" class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="1">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
@@ -248,7 +249,7 @@
                                     <img src="assets/img/oleomec-750.jpg" alt="Interactive Detailers">
                                     <figcaption>Interactive<br>Detailers</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/iDetail/" target="_blank" class="link"></a>
+                                <a href="#" target="_blank" class="link"></a>
                             </div>
                         </div>
                     </div>
@@ -260,14 +261,15 @@
                         <div class="row">
                            <div class="col-md-12">
                                <div class="col-md-6 moove" data-rellax-speed="1">
-                                   <h2>Aw_<br>ards<span class="color">:</span></h2>
+                                   <h2>add_<br>ons<span class="color">:</span></h2>
                                </div>
                                <div class="col-md-6 moove" data-rellax-speed="2">
                                    <p data-animation="reveal">I drink coffee, I eat pizza. I write code and improve my design and skills every day. I am honored to work with special people. Sometimes i won some awards.</p>
                                    <ul class="padding-onlytop-md">
+                                       <li>excel-npv<br><span><a href="https://www.npmjs.com/package/excel-npv">NPM package</a></span></li>
                                        <li>Indegene LifeSystems<br><span>Best Performer</span></li>
-                                       <!-- <li>Css Design Awards<br><span><a href="http://www.cssdesignawards.com/sites//30236" target="_blank">Special Kudos</a></span></li>
-                                       <li>Mindsparkle Mag<br><span><a href="http://mindsparklemag.com/website//" target="_blank">Site of the day</a></span></li> -->
+                                       <li>Full Stack Developer Course<br><span>Cognizant MOOC</span></li>
+                                       <li>Real Time Web with Node.js<br><span>Code School</span></li>
                                    </ul>
                                </div>
                            </div>
