Changes to content

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         <div id="banner-share">
             <div class="wrap">
                 <ul>
-                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=https://govardhan-srinivas.github.io"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://govardhan-srinivas.github.io&title=Govardhan%20Srinivas&summary=Full%20Stack%20Developer.%20Angular%20Node%20Bootstrap%20UI/UX%20%20Developer&source=LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=https://govardhan-srinivas.github.io"><i class="fa fa-facebook" aria-hidden="true" target="_blank"></i></a></li>
+                    <li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://govardhan-srinivas.github.io&title=Govardhan%20Srinivas&summary=Full%20Stack%20Developer.%20Angular%20Node%20Bootstrap%20UI/UX%20%20Developer&source=LinkedIn" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li><a href="https://twitter.com/home?status=https%3A//govardhan-srinivas.github.io%20
-                        Full%20Stack%20Web%20Developer"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="https://plus.google.com/share?url=https://govardhan-srinivas.github.io"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                        Full%20Stack%20Web%20Developer" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://plus.google.com/share?url=https://govardhan-srinivas.github.io" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="close-button">
@@ -218,7 +218,7 @@
                                     <img src="assets/img/toscano-750.jpg" alt="Microsoft BVS">
                                     <figcaption>Microsoft<br>BVS</figcaption>
                                 </figure>
-                                <a href="#" target="_blank" class="link"></a>
+                                <a no-href="" class="link"></a>
                             </div>
                             <!-- <div class="see-projects"> 
                                 <h5>see <br>all projects</h5>
@@ -233,7 +233,7 @@
                                     <img src="assets/img/look-750.jpg" alt="Cloud Central Integration">
                                     <figcaption>Cloud<br>Central<br>Integration</figcaption>
                                 </figure>
-                                <a href="#" target="_blank" class="link"></a>
+                                <a no-href="" class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="1">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
@@ -241,7 +241,7 @@
                                     <img src="assets/img/emmearredo-750.jpg" alt="Cloud Central Conversion">
                                     <figcaption>Cloud<br>Central<br>Conversion</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/cloud-central-conversion/" target="_blank" class="link"></a>
+                                <a href="/en/case-studies/cloud-central-converno-sion/"class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="2">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
@@ -249,7 +249,7 @@
                                     <img src="assets/img/oleomec-750.jpg" alt="Interactive Detailers">
                                     <figcaption>Interactive<br>Detailers</figcaption>
                                 </figure>
-                                <a href="#" target="_blank" class="link"></a>
+                                <a no-href="" class="link"></a>
                             </div>
                         </div>
                     </div>
